[gd_scene load_steps=2 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_top = 1.0
margin_right = 40.0
margin_bottom = 41.0
rect_scale = Vector2( 25.6242, 14.8235 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="ColorRect"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 16.4298
margin_top = 2.56349
margin_right = 124.43
margin_bottom = 16.5635
rect_scale = Vector2( 0.0574001, 0.181908 )
text = "PONDERADA SEMANA 05"

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 71.0
margin_top = 220.0
margin_right = 258.0
margin_bottom = 426.0
color = Color( 0.631373, 0.631373, 0.631373, 1 )

[node name="Button" type="Button" parent="ColorRect2"]
margin_left = 43.0
margin_top = 163.0
margin_right = 142.0
margin_bottom = 197.0
text = "CLIQUE AQUI"

[node name="LineEdit" type="LineEdit" parent="ColorRect2"]
margin_left = 41.0
margin_top = 48.0
margin_right = 142.0
margin_bottom = 72.0
placeholder_text = "Digite o nome"

[node name="LineEdit2" type="LineEdit" parent="ColorRect2"]
margin_left = 36.0
margin_top = 107.0
margin_right = 153.0
margin_bottom = 131.0
placeholder_text = "Digite o n√∫mero"

[node name="Label3" type="Label" parent="ColorRect2"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 37.0
margin_top = 5.0
margin_right = 194.0
margin_bottom = 19.0
rect_scale = Vector2( 0.728857, 1.40758 )
text = "SALVAR OS RESULTADOS"

[node name="ColorRect3" type="ColorRect" parent="."]
margin_left = 310.0
margin_top = 219.0
margin_right = 497.0
margin_bottom = 377.0
color = Color( 0.631373, 0.631373, 0.631373, 1 )

[node name="Button2" type="Button" parent="ColorRect3"]
margin_left = 45.0
margin_top = 114.0
margin_right = 144.0
margin_bottom = 148.0
text = "CLIQUE AQUI"

[node name="titulo" type="Label" parent="ColorRect3"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 10.0
margin_top = 7.0
margin_right = 201.0
margin_bottom = 21.0
rect_scale = Vector2( 0.893438, 1.40758 )
text = "INCREMENTANDO O NUMERO"

[node name="ColorRectResult" type="ColorRect" parent="ColorRect3"]
margin_left = 31.0
margin_top = 51.0
margin_right = 155.0
margin_bottom = 91.0
color = Color( 0.803922, 0.803922, 0.803922, 1 )

[node name="Result" type="Label" parent="ColorRect3/ColorRectResult"]
margin_right = 123.0
margin_bottom = 42.0

[node name="ColorRect4" type="ColorRect" parent="."]
margin_left = 556.0
margin_top = 219.0
margin_right = 743.0
margin_bottom = 454.0
color = Color( 0.631373, 0.631373, 0.631373, 1 )

[node name="Button3" type="Button" parent="ColorRect4"]
margin_left = 45.0
margin_top = 187.0
margin_right = 144.0
margin_bottom = 221.0
text = "CLIQUE AQUI"

[node name="TituloPrincipal" type="Label" parent="ColorRect4"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 30.0
margin_top = 6.0
margin_right = 207.0
margin_bottom = 20.0
rect_scale = Vector2( 0.728857, 1.40758 )
text = "PRINTAR A LISTA E O NOME"

[node name="ColorRect" type="ColorRect" parent="ColorRect4"]
margin_left = 38.0
margin_top = 47.0
margin_right = 147.0
margin_bottom = 86.0
color = Color( 0.745098, 0.745098, 0.745098, 1 )

[node name="Titulo" type="Label" parent="ColorRect4/ColorRect"]
margin_left = 33.0
margin_top = -14.0
margin_right = 73.0
text = "NOME"

[node name="Label" type="Label" parent="ColorRect4/ColorRect"]
margin_right = 109.0
margin_bottom = 39.0

[node name="ColorRect2" type="ColorRect" parent="ColorRect4"]
margin_left = 36.0
margin_top = 121.0
margin_right = 149.0
margin_bottom = 165.0
color = Color( 0.74902, 0.74902, 0.74902, 1 )

[node name="Titulo" type="Label" parent="ColorRect4/ColorRect2"]
margin_left = 37.0
margin_top = -14.0
margin_right = 102.0
text = "LISTA"

[node name="Label2" type="Label" parent="ColorRect4/ColorRect2"]
margin_right = 112.0
margin_bottom = 43.0

[connection signal="pressed" from="ColorRect2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect3/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="ColorRect4/Button3" to="." method="_on_Button3_pressed"]
